--- a/common/index.html
+++ b/common/index.html
@@ -1,8 +1,7 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" ng-app="goodly" class="no-js" ng-csp>
 <head>
-	<title>Sample</title>
-	<script src="jquery/dist/jquery.js"></script>
-	<script src="gridster/dist/jquery.gridster.js"></script>
+	<title>Goodly</title>
 	<link rel="stylesheet" type="text/css" href="gridster/dist/jquery.gridster.css">
 	<link rel="stylesheet" type="text/css" href="bootstrap/dist/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="dashboard.css">
@@ -12,8 +11,13 @@
 
 		<div id="dashboard"></div>
 		
+		<script src="jquery/dist/jquery.js"></script>
+		<script src="gridster/dist/jquery.gridster.js"></script>
 		<script src="dashboard.js"></script>
 		<script src="angular/angular.js"></script>
+
+		<script src="app.js"></script>
+		<script src="controller.js"></script>
 	</div>
 </body>
 </html>
